# routes/user/dashboard.js
@@ -1,0 +1,8 @@
+const { Router } = require("express");
+const router = Router();
+
+const { getDetails } = require("../../controllers/user/dashboard/getDetails");
+
+router.get("/", getDetails);
+
+module.exports = router;
